source/stylesheets/styles.css.scss
/* ... */
// MENU BAR TOP
.top-menu-container {
  @include transition (background 0.2s ease-in-out);
  width: 100%;
  height: $top-menu-height;



  top: 0px;
  position: relative;
  z-index: 999;
  @include media($mobile) { background: none; }
  @include media($tablet) { background: none; }
  @include media($desktop) { background: none; }

  .top-menu-content {
    @include outer-container;
  }
}

.top-menu-right {
  @include media($mobile) { display: none; }
  @include media($tablet) { display: none; }
  @include media($desktop) { @include span-columns(10); }
}

.top-menu-brand {
  @include media($mobile) { display: none; }
  @include media($tablet) { display: none; }
  @include media($desktop) { @include span-columns(2); }
    
    .scroller-logo {
      display: none;
    }
    .stationary-logo {
      display: block;
    }

  a { 
    border: 0px;


    img { 
      border: 0px; 
      display: block;
      width: 90px;
      height: auto;
      margin: 0 auto;
      margin-top: 23px;
    }
  }
}

.top-menu-brand-mobile {
  @include media($mobile) { @include span-columns(2); @include shift(2);}
  @include media($tablet) { @include span-columns(2); @include shift(2);}
  @include media($desktop) { display: none; }
  text-align: center;
  a { border: 0px;
    img { border: 0px; height: 60px; width: auto; display: inline-block; margin-top: -10px;}
  }
}

// Main Navigation List
ul.menu {
  list-style: none;
  margin: 0px;
  padding: 0px;
  margin: 0 auto;
  float: right;
  li {
    display: inline-block;
    text-align: center;
    i {
      @include transition (all 0.2s ease-in-out);
      @include white-font;
      color: $dark-d3;
      display: block;
      position: absolute;
      left: 50%;
      margin-left:-14px;
      font-size: 19px;
      margin-top: -50px;
      opacity: 0;      
    }
    a {
      @include transition (all 0.1s ease-in-out);
      @include gill-book;
      @include white-font;
      color: #7f8993;
      color: $dark-d2;
      font-size: 0.9em;
      display: inline-block;
      padding: 30px 15px;
      position: relative;
      margin-left:-4px;
      background: none;
      text-decoration: none;
      text-transform: uppercase;
      &:hover {
        i {
          margin-top: -25px;
          opacity: 1;
        }
        color: $dark-d3;
        text-decoration: none;
        position: relative;
        z-index: 400;
        top: 10px;
        padding-bottom: 24px;   
      }
    }
    .user-login {
     
      color: $dark-d3;
    }  
  }
}

// Div

.sticky-padding {
  margin-top: 80px;
}


.top-link-circle {
  margin-top: 25px;
  margin-right: 20px;
  width: 30px;
  height: 30px;
  background: #aab1b8;
  float: right;
  line-height: 30px;
  border-radius: 20px;
  overflow: hidden;
  opacity: 0;
  position: relative;
  z-index: 900;
  @include transition (background 0.1s ease-in-out);
  &:hover {
    background: $dark;
  }
  &:active {
    background: $dark-d2;
  }
  a.top-link {
    color: $white;
    position: relative;
    font-size: 20px;
    padding: 40px 0px;
    &:hover {
    }
  }
}

// Sticky menu styles
.sticky {  
    position: fixed;  
    width: 100%;
    height: 75px;  
    left: 0;  
    z-index: 999;  
    border-top: 0;
    background: $white;
    border-bottom: 3px solid #eeeeee;
    .scroller-logo {
      display: block;
    }
    .stationary-logo {
      display: none;
    }
} 

// Link styles
a.muted {
  color: #8a8f95;
  @include avenir-light;
}


// Hero Unit Styles
.screenshots {
    @include media($mobile) { display: none;}
    @include media($tablet) { display: block;}
    @include media($desktop) { display: block;}
  text-align: center;
  margin-bottom: -4px;


  img {
    display: inline-block;
    width: 947px;
    width: 100%;
  }
}
/* ... */

